// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppRouter > renders 404 page for unknown routes 1`] = `
<div>
  <div
    class="layout"
  >
    <header
      class="header"
    >
      <div
        class="header-container"
      >
        <div
          class="header-brand"
        >
          <span
            class="header-logo"
          >
            🎲
          </span>
          <span
            class="header-title"
          >
            Platonic Dice
          </span>
          <span
            class="version-badge"
          >
            v
            0.1.0
             - PREVIEW
          </span>
        </div>
        <nav
          class="navbar"
        >
          <button
            aria-expanded="false"
            aria-label="Toggle navigation menu"
            class="nav-toggle"
          >
            <span
              class="hamburger-line"
            />
            <span
              class="hamburger-line"
            />
            <span
              class="hamburger-line"
            />
          </button>
          <ul
            class="nav-links "
          >
            <li>
              <a
                class="nav-link"
                data-discover="true"
                href="/"
              >
                Home
              </a>
            </li>
            <li>
              <a
                class="nav-link"
                data-discover="true"
                href="/die"
              >
                Die Demo
              </a>
            </li>
            <li>
              <a
                class="nav-link"
                data-discover="true"
                href="/core"
              >
                Core Explorer
              </a>
            </li>
            <li>
              <a
                class="nav-link"
                data-discover="true"
                href="/about"
              >
                About
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </header>
    <main
      class="main-content"
    >
      <div
        class="not-found"
      >
        <div
          class="not-found-content"
        >
          <h1
            class="not-found-title"
          >
            404
          </h1>
          <h2
            class="not-found-subtitle"
          >
            Page Not Found
          </h2>
          <p
            class="not-found-message"
          >
            The page you're looking for doesn't exist or has been moved.
          </p>
          <a
            class="not-found-link"
            data-discover="true"
            href="/"
          >
            Return to Home
          </a>
        </div>
      </div>
    </main>
    <footer
      class="footer"
    >
      <div
        class="footer-content"
      >
        <p>
          © 
          2025
           
          Platonic Dice
           |
           
          <a
            href="https://github.com/sjs2k20/platonic-dice"
            rel="noopener noreferrer"
            target="_blank"
          >
            GitHub
          </a>
        </p>
      </div>
    </footer>
  </div>
</div>
`;

exports[`AppRouter > renders all route pages correctly 1`] = `
<div>
  <div
    class="layout"
  >
    <header
      class="header"
    >
      <div
        class="header-container"
      >
        <div
          class="header-brand"
        >
          <span
            class="header-logo"
          >
            🎲
          </span>
          <span
            class="header-title"
          >
            Platonic Dice
          </span>
          <span
            class="version-badge"
          >
            v
            0.1.0
             - PREVIEW
          </span>
        </div>
        <nav
          class="navbar"
        >
          <button
            aria-expanded="false"
            aria-label="Toggle navigation menu"
            class="nav-toggle"
          >
            <span
              class="hamburger-line"
            />
            <span
              class="hamburger-line"
            />
            <span
              class="hamburger-line"
            />
          </button>
          <ul
            class="nav-links "
          >
            <li>
              <a
                class="nav-link"
                data-discover="true"
                href="/"
              >
                Home
              </a>
            </li>
            <li>
              <a
                aria-current="page"
                class="nav-link nav-link--active"
                data-discover="true"
                href="/die"
              >
                Die Demo
              </a>
            </li>
            <li>
              <a
                class="nav-link"
                data-discover="true"
                href="/core"
              >
                Core Explorer
              </a>
            </li>
            <li>
              <a
                class="nav-link"
                data-discover="true"
                href="/about"
              >
                About
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </header>
    <main
      class="main-content"
    >
      <div
        class="page-container"
      >
        <h1>
          Die Class Demo
        </h1>
        <p>
          Interactive demonstration of the Die class from @platonic-dice/dice
        </p>
        <section
          class="demo-section"
        >
          <h2>
            Roll a D20
          </h2>
          <button
            class="roll-button"
          >
            Roll D20
          </button>
        </section>
      </div>
    </main>
    <footer
      class="footer"
    >
      <div
        class="footer-content"
      >
        <p>
          © 
          2025
           
          Platonic Dice
           |
           
          <a
            href="https://github.com/sjs2k20/platonic-dice"
            rel="noopener noreferrer"
            target="_blank"
          >
            GitHub
          </a>
        </p>
      </div>
    </footer>
  </div>
</div>
`;

exports[`AppRouter > renders all route pages correctly 2`] = `
<div>
  <div
    class="layout"
  >
    <header
      class="header"
    >
      <div
        class="header-container"
      >
        <div
          class="header-brand"
        >
          <span
            class="header-logo"
          >
            🎲
          </span>
          <span
            class="header-title"
          >
            Platonic Dice
          </span>
          <span
            class="version-badge"
          >
            v
            0.1.0
             - PREVIEW
          </span>
        </div>
        <nav
          class="navbar"
        >
          <button
            aria-expanded="false"
            aria-label="Toggle navigation menu"
            class="nav-toggle"
          >
            <span
              class="hamburger-line"
            />
            <span
              class="hamburger-line"
            />
            <span
              class="hamburger-line"
            />
          </button>
          <ul
            class="nav-links "
          >
            <li>
              <a
                class="nav-link"
                data-discover="true"
                href="/"
              >
                Home
              </a>
            </li>
            <li>
              <a
                class="nav-link"
                data-discover="true"
                href="/die"
              >
                Die Demo
              </a>
            </li>
            <li>
              <a
                aria-current="page"
                class="nav-link nav-link--active"
                data-discover="true"
                href="/core"
              >
                Core Explorer
              </a>
            </li>
            <li>
              <a
                class="nav-link"
                data-discover="true"
                href="/about"
              >
                About
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </header>
    <main
      class="main-content"
    >
      <div
        class="page-container"
      >
        <h1>
          Core Package Explorer
        </h1>
        <p>
          Interactive API explorer for @platonic-dice/core functions
        </p>
      </div>
    </main>
    <footer
      class="footer"
    >
      <div
        class="footer-content"
      >
        <p>
          © 
          2025
           
          Platonic Dice
           |
           
          <a
            href="https://github.com/sjs2k20/platonic-dice"
            rel="noopener noreferrer"
            target="_blank"
          >
            GitHub
          </a>
        </p>
      </div>
    </footer>
  </div>
</div>
`;

exports[`AppRouter > renders all route pages correctly 3`] = `
<div>
  <div
    class="layout"
  >
    <header
      class="header"
    >
      <div
        class="header-container"
      >
        <div
          class="header-brand"
        >
          <span
            class="header-logo"
          >
            🎲
          </span>
          <span
            class="header-title"
          >
            Platonic Dice
          </span>
          <span
            class="version-badge"
          >
            v
            0.1.0
             - PREVIEW
          </span>
        </div>
        <nav
          class="navbar"
        >
          <button
            aria-expanded="false"
            aria-label="Toggle navigation menu"
            class="nav-toggle"
          >
            <span
              class="hamburger-line"
            />
            <span
              class="hamburger-line"
            />
            <span
              class="hamburger-line"
            />
          </button>
          <ul
            class="nav-links "
          >
            <li>
              <a
                class="nav-link"
                data-discover="true"
                href="/"
              >
                Home
              </a>
            </li>
            <li>
              <a
                class="nav-link"
                data-discover="true"
                href="/die"
              >
                Die Demo
              </a>
            </li>
            <li>
              <a
                class="nav-link"
                data-discover="true"
                href="/core"
              >
                Core Explorer
              </a>
            </li>
            <li>
              <a
                aria-current="page"
                class="nav-link nav-link--active"
                data-discover="true"
                href="/about"
              >
                About
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </header>
    <main
      class="main-content"
    >
      <div
        class="page-container"
      >
        <h1>
          About
        </h1>
        <p>
          Documentation and information about the platonic-dice packages
        </p>
      </div>
    </main>
    <footer
      class="footer"
    >
      <div
        class="footer-content"
      >
        <p>
          © 
          2025
           
          Platonic Dice
           |
           
          <a
            href="https://github.com/sjs2k20/platonic-dice"
            rel="noopener noreferrer"
            target="_blank"
          >
            GitHub
          </a>
        </p>
      </div>
    </footer>
  </div>
</div>
`;

exports[`AppRouter > renders home page at root path 1`] = `
<div>
  <div
    class="layout"
  >
    <header
      class="header"
    >
      <div
        class="header-container"
      >
        <div
          class="header-brand"
        >
          <span
            class="header-logo"
          >
            🎲
          </span>
          <span
            class="header-title"
          >
            Platonic Dice
          </span>
          <span
            class="version-badge"
          >
            v
            0.1.0
             - PREVIEW
          </span>
        </div>
        <nav
          class="navbar"
        >
          <button
            aria-expanded="false"
            aria-label="Toggle navigation menu"
            class="nav-toggle"
          >
            <span
              class="hamburger-line"
            />
            <span
              class="hamburger-line"
            />
            <span
              class="hamburger-line"
            />
          </button>
          <ul
            class="nav-links "
          >
            <li>
              <a
                aria-current="page"
                class="nav-link nav-link--active"
                data-discover="true"
                href="/"
              >
                Home
              </a>
            </li>
            <li>
              <a
                class="nav-link"
                data-discover="true"
                href="/die"
              >
                Die Demo
              </a>
            </li>
            <li>
              <a
                class="nav-link"
                data-discover="true"
                href="/core"
              >
                Core Explorer
              </a>
            </li>
            <li>
              <a
                class="nav-link"
                data-discover="true"
                href="/about"
              >
                About
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </header>
    <main
      class="main-content"
    >
      <div
        class="page-container"
      >
        <header
          class="home-header"
        >
          <h1>
            🎲 Platonic Dice
          </h1>
          <p>
            Interactive showcase for the platonic-dice packages
          </p>
        </header>
        <main
          class="home-main"
        >
          <section
            class="info-section"
          >
            <p>
              Explore the full capabilities of the platonic-dice packages using the navigation above.
            </p>
          </section>
        </main>
      </div>
    </main>
    <footer
      class="footer"
    >
      <div
        class="footer-content"
      >
        <p>
          © 
          2025
           
          Platonic Dice
           |
           
          <a
            href="https://github.com/sjs2k20/platonic-dice"
            rel="noopener noreferrer"
            target="_blank"
          >
            GitHub
          </a>
        </p>
      </div>
    </footer>
  </div>
</div>
`;
